2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/main.c: Added, we can now start to test the .xml reading and
	the object implementation.
	* src/status-xml.c: The Hash tables can free the memory automaticly
	when we don't need them anymore.

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/status.h, src/status-xml.c: The new xml parser module.
	* src/status-view.c: Added support for groups.
	* data/status-gnome.xml: Added an example for the new .xml file format
	
2003-07-27  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-view.[ch]: Added the view object.

2003-07-26  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-server.[ch]: Added, we will have only cvs server, but
	in the future we could add FTP, WEB, Subversion and other sources
	* src/status-version.[ch], src/status-module.[ch]: Small changes.

2003-06-09  Carlos Perelló Marín <carlos@gnome.org>

	* Started the improved new "big" project called status pages.
	* translation-status.*, ChangeLog: Moved to data subdir to
	sort all files.
	* doc/Design: Added a file that will have all requests and features
	that we will implement.
	* src/status-module.[ch]: Added, will handle the module Objects
	* src/status-version.[ch]: Added, will handle the version objects
	inside the module.