@@ -1,0 +1,7 @@
+SUBDIRS = po src doc data
+
+EXTRA_DIST = \
+	intltool-extract.in	\
+	intltool-merge.in	\
+	intltool-update.in	\
+	COPYING
