@@ -1,0 +1,9 @@
+EXTRA_DIST = translation-status.dtd status-gnome.xml
+
+xmldir = $(localstatedir)/cache/translation-status
+
+xml_DATA = status-gnome.xml
+
+EXTRA_DIST = \
+	translation-status.dtd	\
+	$(xml_DATA)
