@@ -1,0 +1,2 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
