@@ -1,5 +1,11 @@
 2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
 
+	* COPYING, Makefile.am, NEWS, README, autogen.sh, configure.ac,
+	data/Makefile.am, doc/Makefile.am, po/POTFILES.in, src/Makefile.am:
+	Imported the initial autoconf/automake support.
+
+2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
+
 	* src/main.c: Added, we can now start to test the .xml reading and
 	the object implementation.
 	* src/status-xml.c: The Hash tables can free the memory automaticly
